--- a/contact.html
+++ b/contact.html
@@ -1,82 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
     <head>
         <meta charset="utf-8">
-        <title>contact</title>
-        <meta name="viewport" content="width=device-width" initial-scale="1.0">
+        <title>Contact - Muziekschool H&J</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="stylesheet.css" rel="stylesheet">
-        <style>
-            [class*="col-"] {
-                width: 100%;    
-            }
-            @media only screen and (min-width: 600px){
-                [class*="col-"] {
-                    float: left;
-                    padding: 15px;
-                }
-                .col-1 {width: 8.33%;}
-                .col-2 {width: 16.66%;}
-                .col-3 {width: 25%;}
-                .col-4 {width: 33.33%;}
-                .col-5 {width: 41.66%;}
-                .col-6 {width: 50%;}
-                .col-7 {width: 58.33%;}
-                .col-8 {width: 66.66%;}
-                .col-9 {width: 75%;}
-                .col-10 {width: 83.33%;}
-                .col-11 {width: 91.66%;}
-                .col-12 {width: 100%;}
-                }
-        </style>
     </head>
     <body>
         <div class="header">
             <br>
-        <h1><b>Muziekschool H&J</b></h1>
-        <h3>Contact</h3>
+            <h1><b>Muziekschool H&J</b></h1>
+            <h3>Contact</h3>
             <br>
-            <br>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="overons.html">Over ons</a></li>
-                    <li><a href="tarieven.html">Tarieven</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="overons.html">Over ons</a></li>
+                <li><a href="tarieven.html">Tarieven</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+        <div class="gele-lijn"></div>
+        <div class="row">
+            <div class="col-4">
+                <p class="p1">Adresgegevens</p>
+                <br>
+                <p class="p6">Muziekschool H&J<br>
+                t.a.v. Hannah en Jesse<br>
+                Industrieterrein 37<br>
+                5981 NK Panningen<br>
+                0123-456789<br>
+                muziekschoolhj@inlook.com</p>
+                <br>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2494.625345678!2d5.981!3d51.328!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTHCsDE5JzQwLjgiTiA1wrA1OCc1MS42IkU!5e0!3m2!1snl!2snl!4v1620000000000!5m2!1snl!2snl" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
-            <div style="width: 100%; height: 4px; background-color: yellow"></div>
-                <div class="col-4">
-                    <p class="p1">Adresgegevens
-                        <br>
-                    <p class="p6">Muziekschool H&J
-                    <br clear="all">t.a.v. Hannah en Jesse Industrieterrein 37
-                    <br clear="all">5981 NK Panningen
-                    <br clear="all">0123-456789
-                    <br clear="all">muziekschoolhj@inlook.com
-                    <br>
-                    <br>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2492.7549992665586!2d5.975584676116456!3d51.33402602335481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c7485bd5bc80c3%3A0xc56f3d8c01a8a374!2sIndustrieterrein%20Panningen%2037%2C%205981%20NK%20Panningen!5e0!3m2!1snl!2snl!4v1715974017154!5m2!1snl!2snl" width="300" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-                <div class="col-9">
-                    <p class="p3"><strong>Contact</strong>
-                    <p class="p4"><strong>U kunt een bericht achterlaten via onderstaand contactformulier</strong></p>
-                    <form class="form">
-                    <p class="p4">Uw voornaam</p><input type="text" placeholder="Uw voornaam">
-                    <p class="p4">Uw achternaam</p><input type="text" placeholder="Uw achternaam">
-                    <p class="p4">Uw e-mailadres</p><input type="email" placeholder="Uw e-mailadres">
+            <div class="col-8">
+                <p class="p3"><strong>Contact</strong></p>
+                <p class="p4"><strong>U kunt een bericht achterlaten via onderstaand contactformulier.</strong></p>
+                <br>
+                <form>
+                    <p class="p4">Uw voornaam</p><input type="text" style="width:100%; margin-bottom:10px;">
+                    <p class="p4">Uw achternaam</p><input type="text" style="width:100%; margin-bottom:10px;">
+                    <p class="p4">Uw e-mailadres</p><input type="email" style="width:100%; margin-bottom:10px;">
                     <p class="p4">Land</p>
-                    <select>
-                    <option>Nederland</option>
-                    </select>
+                    <select style="width:100%; margin-bottom:10px;"><option>Nederland</option></select>
                     <p class="p4">Bericht</p>
-                    <textarea placeholder="Uw bericht hier"></textarea>
-                    <button>Verzend</button>
-                    </form>
-                </div>
-            <footer class="footer">
-                <br>
-                <br>
-                <p class="p5">Copyright 2021 Muziekschool H&J
-                <p class="p5">(Dit is een oefenopdracht, alle informatie op deze website is fictief.)
-     </body>
+                    <textarea style="width:100%; height:150px;"></textarea>
+                    <br><br>
+                    <button type="submit" style="background-color: #8b3a00; color: white; padding: 10px 20px; border: none; cursor: pointer;">Verzend</button>
+                </form>
+            </div>
+        </div>
+        <footer class="footer">
+            <p class="p5">Copyright 2021 Muziekschool H&J</p>
+            <p class="p5">(Dit is een oefenopdracht, alle informatie op deze website is fictief.)</p>
+        </footer>
+    </body>
 </html>
-   
