--- a/tarieven.html
+++ b/tarieven.html
@@ -1,76 +1,57 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>tarieven</title>
-        <meta name="viewport" content="width=device-width" initial-scale="1.0">
-        <link href="stylesheet.css" rel="stylesheet">
-        <style>
-            [class*="col-"] {
-                width: 100%;    
-            }
-            @media only screen and (min-width: 600px){
-                [class*="col-"] {
-                    float: left;
-                    padding: 15px;
-                }
-                .col-1 {width: 8.33%;}
-                .col-2 {width: 16.66%;}
-                .col-3 {width: 25%;}
-                .col-4 {width: 33.33%;}
-                .col-5 {width: 41.66%;}
-                .col-6 {width: 50%;}
-                .col-7 {width: 58.33%;}
-                .col-8 {width: 66.66%;}
-                .col-9 {width: 75%;}
-                .col-10 {width: 83.33%;}
-                .col-11 {width: 91.66%;}
-                .col-12 {width: 100%;}
-                }
-        </style>
-    </head>
-    <body>
-        <div class="header">
-            <br>
+<html lang="nl">
+<head>
+    <meta charset="utf-8">
+    <title>Tarieven - Muziekschool H&J</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="stylesheet.css" rel="stylesheet">
+</head>
+<body>
+    <div class="header">
         <h1><b>Muziekschool H&J</b></h1>
         <h3>Tarieven</h3>
+        <br>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="overons.html">Over ons</a></li>
+            <li><a href="tarieven.html">Tarieven</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </div>
+    <div class="gele-lijn"></div>
+
+    <div class="row">
+        <div class="col-4">
+            <p class="p1">Tarieven</p>
             <br>
+            <p class="p4">Individuele les: €30,- per halfuur.</p>
+            <hr>
+            <p class="p4">Groepsles: €30,- gedeeld door het aantal deelnemers.</p>
+            <hr>
+            <p class="p4">Groepsles kinderen: €10,- per uur.</p>
+        </div>
+
+        <div class="col-8">
+            <p class="p3"><strong>Voorwaarden</strong></p>
+            <p class="p4"><strong>Algemene voorwaarden - Muziekschool H&J</strong></p>
             <br>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="overons.html">Over ons</a></li>
-                    <li><a href="tarieven.html">Tarieven</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-            <div style="width: 100%; height: 4px; background-color: yellow"></div>
-                <div class="col-4">
-                    <p class="p1">Tarieven
-                        <br>
-                    <p class="p4">Individuele les: €30,- per halfuur.</p>
-                        <hr>
-                    <p class="p4">Groepsles: Dezelfde prijs per persoon (dus €<br clear="all">30,- gedeeld door het aantal deelnemers).</p>
-                        <hr>
-                    <p class="p4">Groepsles kinderen: €10,- per uur.
-                    </div>
-                <div class="col-9">
-                    <p class="p3"><strong>Voorwaarden</strong>
-                    <p class="p4"><strong>Algemene voorwaarden - Muziekschool H&J</strong></p>
-                    <p class="p4"><strong>Artikel 1:</strong> Inschijving</p>
-                    <hr>
-                    <p class="p4">U kunt zich inschrijven door u aan te melden bij het bureau van de muziekschool en het inschrijfformulier te ondertekenen.</p>
-                    <p class="p4"><strong>Artikel 2:</strong></p> Duur cursusjaar
-                    <hr>
-                    <p class="p4">Het cursusjaar loopt van 1 september tot en met 30 juni van het volgend jaar.</p>
-                    <p class="p4"><strong>Artikel 3:</strong></p> Uitschrijving
-                    <hr>
-                    <p class="p4">Tussentijdse beëindiging/opzegging is uitsluitend mogelijk na een schriftelijk verzoek.</p>
-                </div>
-            <footer class="footer">
-                <br>
-                <br>
-                <p class="p5">Copyright 2021 Muziekschool H&J
-                <p class="p5">(Dit is een oefenopdracht, alle informatie op deze website is fictief.)
-     </body>
+            <p class="p4"><strong>Artikel 1: Inschrijving</strong></p>
+            <hr>
+            <p class="p4">U kunt zich inschrijven door u aan te melden bij het bureau van de muziekschool en het inschrijfformulier te ondertekenen.</p>
+            <br>
+            <p class="p4"><strong>Artikel 2: Duur cursusjaar</strong></p>
+            <hr>
+            <p class="p4">Het cursusjaar loopt van 1 september tot en met 30 juni van het volgend jaar.</p>
+            <br>
+            <p class="p4"><strong>Artikel 3: Uitschrijving</strong></p>
+            <hr>
+            <p class="p4">Tussentijdse beëindiging/opzegging is uitsluitend mogelijk na een schriftelijk verzoek.</p>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <p class="p5">Copyright 2021 Muziekschool H&J</p>
+        <p class="p5">(Dit is een oefenopdracht, alle informatie op deze website is fictief.)</p>
+    </footer>
+</body>
 </html>
-   
